Changed waitFor to wait -pin- changes instead of -module-

--- a/language/org.gemoc.arduino.sequential.model.edit/plugin.properties
+++ b/language/org.gemoc.arduino.sequential.model.edit/plugin.properties
@@ -145,3 +145,4 @@ _UI_WaitFor_mode_feature = Mode
 _UI_ChangeType_RISING_literal = RISING
 _UI_ChangeType_FALLING_literal = FALLING
 _UI_ChangeType_CHANGE_literal = CHANGE
+_UI_WaitFor_pin_feature = Pin
