--- a/language/fr.obeo.dsl.arduino.gen/tasks/generate.xml
+++ b/language/fr.obeo.dsl.arduino.gen/tasks/generate.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default="generate" name="fr.obeo.dsl.arduino.gen">
     <property name="ECLIPSE_HOME" value="../../../../../apps/gemoc_studio_nightly"/>
-    <property name="ECLIPSE_WORKSPACE" value="../../../../../../runtime-arduinoconfiguration"/>
+    <property name="ECLIPSE_WORKSPACE" value="../../../../../../workspace"/>
 
     <!-- The classpath with only the dependencies used by the project -->
     <path id="fr.obeo.dsl.arduino.gen.libraryclasspath">
